Novos componentes:  usuarios, empresas e login

--- a/src/app/components/template/nav/nav.component.html
+++ b/src/app/components/template/nav/nav.component.html
@@ -26,6 +26,24 @@
                 </i>
                 Contato
             </a>
+            <a mat-list-item routerLink="cadastrousuario">
+                <i class="material-icons">
+                    person_add
+                </i>
+                Usuários
+            </a>
+            <a mat-list-item routerLink="cadastroempresa">
+                <i class="material-icons">
+                    group_add
+                </i>
+                Empresas
+            </a>
+            <a mat-list-item routerLink="login">
+                <i class="material-icons">
+                    login
+                </i>
+                Login
+            </a>
             <a mat-list-item routerLink="sobre">
                 <i class="material-icons">
                     info
