--- a/src/app/components/template/footer/footer.component.html
+++ b/src/app/components/template/footer/footer.component.html
@@ -4,7 +4,7 @@
         <i class="material-icons v-middle" appRed>
             favorite
         </i>
-        por <strong>CyberSec</strong>
+        por <strong>Equipe Connor</strong>
     </span>
 
 </mat-toolbar>
