--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -244,7 +244,7 @@
         <i class="material-icons v-middle" appRed>
             favorite
         </i>
-        por <strong>CyberSec</strong>
+        por <strong>Equipe Connor</strong>
     </span>
 
 </mat-toolbar>
