--- a/src/app/views/sobre/sobre.component.html
+++ b/src/app/views/sobre/sobre.component.html
@@ -44,7 +44,7 @@
         <i class="material-icons v-middle" appRed>
             favorite
         </i>
-        por <strong>CyberSec</strong>
+        por <strong>Equipe Connor</strong>
     </span>
 
 </mat-toolbar>
