Adição de firebase, area login, area restrita...

--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -2,7 +2,7 @@
     <span>
         <a routerLink="/" >
             <img class="logo" src="assets/img/Connor.png" alt="logo" appRed>
-            <h1 class="titulo">CyberSec.com</h1>
+            <h1 class="titulo">Cyber Sec Web App</h1>
         </a>
     </span>
     <span class="title-group">
