--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,6 +1,6 @@
 <mat-card class="home mat-elevation-z3">
     <mat-card-title class="title">
-        CyberSec.com 
+        Cyber Sec Web App 
     </mat-card-title>
     <mat-card-subtitle class="subtitulo">
         O site para você que quer iniciar sua carreira em Segurança cibernética! <br><br>
