--- a/src/app/components/template/nav/nav.component.html
+++ b/src/app/components/template/nav/nav.component.html
@@ -18,7 +18,7 @@
                 <i class="material-icons">
                     storefront
                 </i>
-                Produtos
+                Certificações
             </a>
             <a mat-list-item routerLink="contatos">
                 <i class="material-icons">
@@ -38,7 +38,7 @@
                 </i>
                 Empresas
             </a>
-            <a mat-list-item routerLink="login">
+            <a mat-list-item routerLink="login/admin">
                 <i class="material-icons">
                     login
                 </i>
