--- a/src/app/views/cadastro-empresa/cadastro-empresa.component.html
+++ b/src/app/views/cadastro-empresa/cadastro-empresa.component.html
@@ -1,1 +1,37 @@
-<p>cadastro-empresa works!</p>
+<div class="flex flex-column flex-grow-1 flex align-items-center justify-content-center bg-gray-200">
+    <div class="fadein animation-duration-500 p-4 w-100 xl:w-3">
+        <div class="text-center mb-5">
+            <div class="cadastro">Cadastro de Empresas</div>
+        </div>
+
+        <form [formGroup]="form" class="conteudo">
+            <label for="razaosocial" class="block text-900 font-medium mb-2">Razão Social</label>
+            <input class="w-full" pInputText formControlName="razaosocial" autocomplete="off">
+
+            <label for="email" class="block text-900 font-medium mb-2">E-mail</label>
+            <input class="w-full" id="email" formControlName="email" type="text" pInputText autocomplete="off">
+
+            <label for="password" class="block text-900 font-medium mb-2">Senha</label>
+            <input class="w-full mb-3" formControlName="senha" type="password" pPassword />
+
+            <label for="telefone" class="block text-900 font-medium mb-2">Telefone</label>
+            <input class="w-full" pInputText formControlName="telefone" autocomplete="off">
+
+            <label for="whatsapp" class="block text-900 font-medium mb-2">Whatsapp</label>
+            <input class="w-full" pInputText formControlName="whatsapp" autocomplete="off">
+
+            <label for="linkedin" class="block text-900 font-medium mb-2">Linkedin</label>
+            <input class="w-full" pInputText formControlName="linkedin" autocomplete="off">
+
+            <label for="cnpj" class="block text-900 font-medium mb-2">CNPJ</label>
+            <input class="w-full" pInputText formControlName="cnpj" autocomplete="off">
+
+            <label for="porte" class="block text-900 font-medium mb-2">Porte (pequena, média ou grande)</label>
+            <input class="w-full" pInputText formControlName="porte" autocomplete="off">
+
+            <br>
+            <button (click)="onSalvarEmpresa()" pButton pRipple label="Cadastrar" icon="pi pi-user" class="button"
+                [disabled]="!form.valid">Cadastrar</button>
+        </form>
+    </div>
+</div>
