--- a/src/app/views/contatos/contatos.component.css
+++ b/src/app/views/contatos/contatos.component.css
@@ -27,7 +27,7 @@ button {
 
 button {
     margin-top: 10px;
-    background-color: transparent;
+    background-color: rgb(174, 162, 106);
     color: black;
     border: 1px solid black;
     padding: 4px 16px;
