--- a/src/app/views/cadastro-empresa/cadastro-empresa.component.html
+++ b/src/app/views/cadastro-empresa/cadastro-empresa.component.html
@@ -6,32 +6,32 @@
 
         <form [formGroup]="form" class="conteudo">
             <label for="razaosocial" class="block text-900 font-medium mb-2">Razão Social</label>
-            <input class="w-full" pInputText formControlName="razaosocial" autocomplete="off">
+            <input class="caixa" pInputText formControlName="razaosocial" autocomplete="off">
 
             <label for="email" class="block text-900 font-medium mb-2">E-mail</label>
-            <input class="w-full" id="email" formControlName="email" type="text" pInputText autocomplete="off">
+            <input class="caixa" id="email" formControlName="email" type="text" pInputText autocomplete="off">
 
             <label for="password" class="block text-900 font-medium mb-2">Senha</label>
-            <input class="w-full mb-3" formControlName="senha" type="password" pPassword />
+            <input class="caixa mb-3" formControlName="senha" type="password" pPassword />
 
             <label for="telefone" class="block text-900 font-medium mb-2">Telefone</label>
-            <input class="w-full" pInputText formControlName="telefone" autocomplete="off">
+            <input class="caixa" pInputText formControlName="telefone" autocomplete="off">
 
             <label for="whatsapp" class="block text-900 font-medium mb-2">Whatsapp</label>
-            <input class="w-full" pInputText formControlName="whatsapp" autocomplete="off">
+            <input class="caixa" pInputText formControlName="whatsapp" autocomplete="off">
 
             <label for="linkedin" class="block text-900 font-medium mb-2">Linkedin</label>
-            <input class="w-full" pInputText formControlName="linkedin" autocomplete="off">
+            <input class="caixa" pInputText formControlName="linkedin" autocomplete="off">
 
             <label for="cnpj" class="block text-900 font-medium mb-2">CNPJ</label>
-            <input class="w-full" pInputText formControlName="cnpj" autocomplete="off">
+            <input class="caixa" pInputText formControlName="cnpj" autocomplete="off">
 
             <label for="porte" class="block text-900 font-medium mb-2">Porte (pequena, média ou grande)</label>
-            <input class="w-full" pInputText formControlName="porte" autocomplete="off">
+            <input class="caixa" pInputText formControlName="porte" autocomplete="off">
 
             <br>
-            <button (click)="onSalvarEmpresa()" pButton pRipple label="Cadastrar" icon="pi pi-user" class="button"
-                [disabled]="!form.valid">Cadastrar</button>
+            <button (click)="onSalvarEmpresa()" pButton pRipple label="Cadastrar" class="button" icon="pi pi-user"
+                [disabled]="!form.valid"><span>Cadastrar</span></button>
         </form>
     </div>
 </div>
