--- a/src/app/views/cadastro-usuario/cadastro-usuario.component.html
+++ b/src/app/views/cadastro-usuario/cadastro-usuario.component.html
@@ -12,7 +12,7 @@
             <input class="caixa" id="email" formControlName="email" type="text" pInputText autocomplete="off">
 
             <label for="password" class="block text-900 font-medium mb-2">Senha</label>
-            <input class="caixa mb-3" formControlName="senha" type="password" pPassword />
+            <input class="caixa" formControlName="senha" type="password" pPassword />
 
             <label for="endereco" class="block text-900 font-medium mb-2">Endereço</label>
             <input class="caixa" pInputText formControlName="endereco" autocomplete="off">
